welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:5: error: not found: value avancer
    	avancer(nbPas)
        ^Program:7: error: not found: value reculer
    	reculer(nbPas)
        ^